[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Fonts/prstartk.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Shop.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.607843 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Shop" type="Node"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 1088.0
margin_top = 1136.0
margin_right = 1588.0
margin_bottom = 1176.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 10.0
margin_top = 72.0
margin_right = 310.0
margin_bottom = 472.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 562.0
margin_bottom = 529.0
custom_constants/separation = 65

[node name="CoreHealthAdd" type="ToolButton" parent="Panel/ScrollContainer/VBoxContainer"]
margin_right = 562.0
margin_bottom = 34.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.74902, 0.14902, 0.317647, 1 )
custom_colors/font_color = Color( 0.709804, 0.878431, 0.729412, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.701961, 0.572549, 1 )
custom_colors/font_color_pressed = Color( 0.298039, 0.560784, 0.509804, 1 )
text = "100% Core, 30 Coins"
align = 0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/CoreHealthAdd"]
margin_top = 44.0
margin_right = 700.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
text = "  Restore core to it's full health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerttiHealth" type="ToolButton" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 562.0
margin_bottom = 133.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.74902, 0.14902, 0.317647, 1 )
custom_colors/font_color = Color( 0.709804, 0.878431, 0.729412, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.701961, 0.572549, 1 )
custom_colors/font_color_pressed = Color( 0.298039, 0.560784, 0.509804, 1 )
text = "100% Pertti, 15 Coins"
align = 0

[node name="Label2" type="Label" parent="Panel/ScrollContainer/VBoxContainer/PerttiHealth"]
margin_top = 44.0
margin_right = 700.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
text = "  Restore Pertti to his full health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Core2X" type="ToolButton" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 562.0
margin_bottom = 232.0
custom_styles/focus = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.74902, 0.14902, 0.317647, 1 )
custom_colors/font_color = Color( 0.709804, 0.878431, 0.729412, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.701961, 0.572549, 1 )
custom_colors/font_color_pressed = Color( 0.298039, 0.560784, 0.509804, 1 )
text = "2X HP Core, 60 Coins"
align = 0

[node name="Label3" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Core2X"]
margin_top = 44.0
margin_right = 540.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
text = "  Double the Core's health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pertti2X" type="ToolButton" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 297.0
margin_right = 562.0
margin_bottom = 331.0
custom_styles/focus = SubResource( 8 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.74902, 0.0862745, 0.317647, 1 )
custom_colors/font_color = Color( 0.709804, 0.878431, 0.729412, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.701961, 0.572549, 1 )
custom_colors/font_color_pressed = Color( 0.298039, 0.560784, 0.509804, 1 )
text = "2X HP Pertti, 60 Coins"
align = 0

[node name="Label4" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Pertti2X"]
margin_top = 44.0
margin_right = 540.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
text = "  Double Pertti's health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Harold" type="ToolButton" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 562.0
margin_bottom = 430.0
custom_styles/focus = SubResource( 9 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.74902, 0.14902, 0.317647, 1 )
custom_colors/font_color = Color( 0.709804, 0.878431, 0.729412, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.701961, 0.572549, 1 )
custom_colors/font_color_pressed = Color( 0.298039, 0.560784, 0.509804, 1 )
text = "Harold, 90 Coins"
align = 0

[node name="Label5" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Harold"]
margin_top = 44.0
margin_right = 540.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
text = "  Hire Harold to assist you"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinBooster" type="ToolButton" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 495.0
margin_right = 562.0
margin_bottom = 529.0
custom_styles/focus = SubResource( 9 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.74902, 0.14902, 0.317647, 1 )
custom_colors/font_color = Color( 0.709804, 0.878431, 0.729412, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.701961, 0.572549, 1 )
custom_colors/font_color_pressed = Color( 0.298039, 0.560784, 0.509804, 1 )
text = "Coin booster, 90 Coins"
align = 0

[node name="Label5" type="Label" parent="Panel/ScrollContainer/VBoxContainer/CoinBooster"]
margin_top = 44.0
margin_right = 540.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
text = "  Double the coins double the fun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopLabel" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.470588, 0.701961, 0.572549, 1 )
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/CoreHealthAdd" to="." method="_on_CoreHealthAdd_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/PerttiHealth" to="." method="_on_PerttiHealth_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/Core2X" to="." method="_on_Core2X_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/Pertti2X" to="." method="_on_Pertti2X_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/Harold" to="." method="_on_Harold_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/CoinBooster" to="." method="_on_CoinBooster_pressed"]
